--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -16,3 +16,11 @@ body {
 .loader {
   @apply w-fit px-8 text-bodyM_regular text-base-5 bg-base-5 rounded-md animate-pulse;
 }
+
+.content-container {
+  @apply flex h-full w-full max-w-[1100px] m-auto rounded-3xl container-shadow px-[24px] py-8 xs:px-[52px] bg-base-0;
+}
+
+.container-shadow {
+  @apply shadow-[0_4px_16px_0px_rgba(0,0,0,0.08)];
+}
